--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ http://www.tooplate.com/view/2084-zipper
                             <p>At I Love Butter, we believe in the little moments that make life sweeter—whether it's your morning ritual, a catch-up with friends, or simply taking a quiet moment for yourself. Our team pours love into everything we do, and nothing brings us more joy than sharing that with you, one bite at a time</p>
                             <p>Welcome to our café, where every treat is made with care, and every visit feels like a homecoming.</p>
                             <div class="video-container">
-                            <video src="Untitled design.mp4" autoplay muted loop></video>
+                            <video src="./Untitled Design.mp4" autoplay muted loop></video>
                            </div> 
                         </div>                        
                     </div> 
